crates/tests/libs/bindgen/data/error/winrt_interface_method_return_non_winrt_type/input.rdl

#[winrt]
mod Test {
    interface IFoo {
        fn GetThing(&self) -> Win32Type;
    }
}
#[win32]
mod Test {
    struct Win32Type { x: i32, }
}
